tests/ui/const-generics/adt_const_params/opaque_type_with_non-universal_region_substs_ice-111911.stderr
error: const parameter `X` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/opaque_type_with_non-universal_region_substs_ice-111911.rs:8:43
   |
LL | pub async fn foo<const X: &'static str>() {}
   |                                           ^^

error: const parameter `X` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/opaque_type_with_non-universal_region_substs_ice-111911.rs:8:43
   |
LL | pub async fn foo<const X: &'static str>() {}
   |                                           ^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

